--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>My Orders</h1>
         <a href="/products">Back to Products</a>
+        <button onclick="clearOrderHistory()">Clear Order History</button>
         <% orders.forEach(order => { %>
             <div class="order">
                 <h2>Order ID: <%= order.id %></h2>
@@ -26,8 +27,10 @@
                 </ul>
                 <p>Address: <%= order.address %></p>
                 <p>Pickup Point: <%= order.pickupPoint %></p>
+                <p>Delivery Date: <%= new Date(order.deliveryDate).toLocaleString() %></p>
             </div>
         <% }) %>
     </div>
+    <script src="/js/cart.js"></script>
 </body>
 </html>
