--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -14,7 +14,7 @@
         <% orders.forEach(order => { %>
             <div class="order">
                 <h2>Order ID: <%= order.id %></h2>
-                <p>Total Price: $<%= order.totalPrice %></p>
+                <p>Total Price: Ksh. <%= order.totalPrice %></p>
                 <p>Status: <%= order.status %></p>
                 <h3>Products:</h3>
                 <ul>
