--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,26 +20,18 @@
             max-height: 150px;
             border-radius: 50%;
         }
-        .cart-icon {
-            position: relative;
-            display: inline-block;
-            margin-left: 20px;
-        }
-        .cart-count {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            background-color: red;
-            color: white;
-            border-radius: 50%;
-            padding: 5px 8px;
-            font-size: 12px;
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>My Profile</h1>
+	<a href="/products">Go Back</a>
+	<div class="profile-image-container">                                                                    <% if (user.profile_photo) { %>
+               <img src="<%= user.profile_photo %>" alt="Profile Photo" class="profile-image">
+	    <% } else { %>
+	       <img src="/images/default-profile.png" alt="Profile Photo" class="profile-image">
+            <% } %>
+	</div>
         <div class="profile-container">
             <div class="profile-details">
                 <form action="/user/profile" method="POST" enctype="multipart/form-data">
@@ -69,27 +61,12 @@
                     </div>
                     <div>
                         <label for="profilePhoto">Profile Photo:</label>
-                        <input type="file" id="profilePhoto" name="profilePhoto" accept="../public/image/*">
+                        <input type="file" id="profilePhoto" name="profilePhoto" accept="image/*">
                     </div>
                     <button type="submit">Update Profile</button>
                 </form>
             </div>
-            <div class="profile-image-container">
-                <% if (user.profile_photo) { %>
-                    <img src="<%= user.profile_photo %>" alt="Profile Photo" class="profile-image">
-                <% } else { %>
-                    <img src="../public/images/default-profile.png" alt="Profile Photo" class="profile-image">
-                <% } %>
-            </div>
         </div>
-
-        <div class="cart-icon">
-            <a href="/cart">
-                <img src="../public/images/cart-icon.png" alt="Cart" width="40" height="40">
-                <span class="cart-count"><%= cartItemCount %></span>
-            </a>
-        </div>
-
         <h2>Change Password</h2>
         <form action="/user/change-password" method="POST">
             <div>
