--- a/public/css/products.css
+++ b/public/css/products.css
@@ -156,6 +156,12 @@ body, ul, li, a {
     color: #ff6347;
 }
 
+a {
+    font-weight: bold;
+    color: black;
+    font-size: 20px;
+}
+
 /* Profile image styles */
 .profile-image {
     width: 30px;
@@ -188,6 +194,24 @@ body, ul, li, a {
     padding: 2px 6px;
     font-size: 12px;
     font-weight: bold;
+}
+
+#toast {
+    color: green;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+h1 {
+    font-weight: bold;
+    color: white;
+    font-size: 25px;
+}
+
+h2 {
+    font-weight: bold;
+    color: black;
+    font-size: 20px;
 }
 
 body {
