--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -41,7 +41,7 @@
                 <label class="form-label" for="productStatus">Status:</label>
                 <select class="form-select" id="productStatus" name="productStatus" required>
                     <option value="available">Available</option>
-                    <option value="unavailable">Unavailable</option>
+                    <option value="unavailable">Out of stock</option>
                 </select>
             </div>
 
