--- a/views/products.ejs
+++ b/views/products.ejs
@@ -48,9 +48,30 @@
       </div>
     </div>
 
+    <!-- Delivery Information Modal -->
+    <div id="deliveryModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Delivery Information</h2>
+            <label for="address">Delivery Address:</label>
+            <input type="text" id="address" name="address" required>
+            <label for="pickupPoint">Pickup Point:</label>
+            <input type="text" id="pickupPoint" name="pickupPoint" required>
+            <div class="option-group">
+	       <label>
+		 <input type="radio" name="isNairobi" value="yes" required> Within Nairobi
+	       </label>
+	       <label>
+		 <input type="radio" name="isNairobi" value="no"> Outside Nairobi
+	       </label>
+	    </div>
+            <button onclick="submitDeliveryInfo()">Submit</button>
+        </div>
+    </div>
+
     <div id="cart">
      <div id="toast"></div>
-      <h2 class="h2">Cart</h2>
+      <h2 class="h2">Your Cart</h2>
       <ul id="cart-items"></ul>
       <p>Total: Ksh. <span id="cart-total">0</span></p>
       <button class="btn check-out" onclick="checkout()">Checkout</button>
