--- a/views/orderedProducts.ejs
+++ b/views/orderedProducts.ejs
@@ -58,5 +58,8 @@
             </tbody>
         </table>
     </div>
+    <footer>
+       <p>&copy; 2024 Shopping Market. All rights reserved. Authors: Susan Kimemia & Levince Otieno. Contact: <a href="mailto:shopping_market@gmail.com">shopping_market@gmail.com</a></p>
+    </footer>
 </body>
 </html>
