--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -73,7 +73,7 @@ body {
 
 .header-nav {
     width: 100%;
-    background-color: white;
+    background-color: #003300;
     position: fixed;
     top: 0;
     left: 0;
@@ -99,7 +99,7 @@ body {
 
 /* Link styles */
 .nav-list a {
-    color: black;
+    color: white;
     font-size: 16px;
     font-weight: bold;
     padding: 10px 15px;
@@ -108,7 +108,7 @@ body {
 
 /* Hover effect */
 .nav-list a:hover {
-    color: #ff6347;
+    color: darkgreen;
 }
 
 .product-list {
@@ -133,4 +133,12 @@ body {
     max-width: 100%;
     height: auto; /* Make the image fit within the box */
     border-radius: 5px;
+}
+
+footer {                                                                                                 text-align: center;                                                                                  margin-top: 20px;                                                                                    font-size: 0.7em;                                                                                    color: #888888;                                                                                  }                                                                                                                                                                                                         footer a {                                                                                               color: #28a745;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
