--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -12,7 +12,7 @@ body, ul, li, a, button {
 /* Header styles */
 .header-nav {
     width: 100%;
-    background-color: #333;
+    background-color: #003300;
     position: fixed;
     top: 0;
     left: 0;
@@ -47,7 +47,7 @@ body, ul, li, a, button {
 
 /* Hover effect */
 .nav-list a:hover {
-    color: #ff6347;
+    color: darkgreen;
 }
 
 /* Profile image styles */
@@ -175,4 +175,12 @@ body, ul, li, a, button {
 
 .clear-history-btn:hover {
     background-color: #c82333;
+}
+
+footer {                                                                                                 text-align: center;                                                                                  margin-top: 20px;                                                                                    font-size: 0.7em;                                                                                    color: #888888;                                                                                  }                                                                                                                                                                                                         footer a {                                                                                               color: #28a745;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
