--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -16,7 +16,7 @@ body {
 /* Header styles */
 .header-nav {
     width: 100%;
-    background-color: #333;
+    background-color: #003300;
     position: fixed;
     top: 0;
     left: 0;
@@ -51,7 +51,7 @@ body {
 
 /* Hover effect */
 .nav-list a:hover {
-    color: #ff6347;
+    color: darkgreen;
 }
 
 /* Profile image styles */
@@ -170,4 +170,12 @@ body {
 
 .back-link:hover {
     color: #0056b3;
+}
+
+footer {                                                                                                 text-align: center;                                                                                  margin-top: 20px;                                                                                    font-size: 0.7em;                                                                                    color: #888888;                                                                                  }                                                                                                                                                                                                         footer a {                                                                                               color: #28a745;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
