--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -84,5 +84,8 @@
             });
         });
     </script>
+    <footer>
+       <p>&copy; 2024 Shopping Market. All rights reserved. Authors: Susan Kimemia & Levince Otieno. Contact: <a href="mailto:shopping_market@gmail.com">shopping_market@gmail.com</a></p>
+    </footer>
 </body>
 </html>
