--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,11 @@
             <button type="submit">Login</button>
         </form>
         <p class="register-link">Don't have an account? <a href="/user/register">Register</a></p>
+	<div class="back-links">
+	   <a href="/products">Back to Products</a>
+	</div>
     </div>
+
     <footer>
         <p>&copy; 2024 Shopping Market. All rights reserved. Authors: Susan Kimemia & Levince Otieno. Contact: <a href="mailto:shopping_market@gmail.com">shopping_market@gmail.com</a></p>
     </footer>
