--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -47,6 +47,9 @@
             </div>
         <% }) %>
     </div>
+    <footer>
+       <p>&copy; 2024 Shopping Market. All rights reserved. Authors: Susan Kimemia & Levince Otieno. Contact: <a href="mailto:shopping_market@gmail.com">shopping_market@gmail.com</a></p>
+    </footer>
     <script src="/js/cart.js"></script>
 </body>
 </html>
