--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -74,5 +74,8 @@
             <button type="submit" class="btn">Change Password</button>
         </form>
     </div>
+    <footer>
+       <p>&copy; 2024 Shopping Market. All rights reserved. Authors: Susan Kimemia & Levince Otieno. Contact: <a href="mailto:shopping_market@gmail.com">shopping_market@gmail.com</a></p>
+    </footer>
 </body>
 </html>
