--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,11 @@
             <button type="submit">Register</button>
         </form>
         <p class="login-link">Already have an account? <a href="/user/login">Login</a></p>
+	<div class="back-links">
+	   <a href="/products">Back to Products</a>
+        </div>
     </div>
+
     <footer>
         <p>&copy; 2024 Shopping Market. All rights reserved. Authors: Susan Kimemia & Levince Otieno. Contact: <a href="mailto:shopping_market@gmail.com">shopping_market@gmail.com</a></p>
     </footer>
