settling setup changes on the product page

--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -9,8 +9,9 @@
     <header>
       <nav class="header-nav">
         <ul class="nav-list">
+          <h1>SHOPPING MARKET</h1>
           <li><a href="/products">Products</a></li>
-	  <li><a href="/user/logout">Logout</a></li>
+	      <li><a href="/user/logout">Logout</a></li>
         </ul>
       </nav>
     </header>
