--- a/views/orderedProducts.ejs
+++ b/views/orderedProducts.ejs
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="/css/orderedProducts.css">
 </head>
 <body>
-    <header>                                                                                               <nav class="header-nav">                                                                               <ul class="nav-list">                                                                                  <li><a href="/products">Products</a></li>
-          <li><a href="/user/logout">Logout</a></li>                                                         </ul>
+    <header>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <h1>SHOPPING MARKET</h1>
+          <li><a href="/products">Products</a></li>
+          <li><a href="/user/logout">Logout</a></li>
+        </ul>
       </nav>
     </header>
     <div class="container">
