--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -1,11 +1,11 @@
 /* addProduct.css */
 
 body {
-    padding-top: 60px; /* To avoid content being hidden behind the fixed header */
+    padding-top: 90px; /* To avoid content being hidden behind the fixed header */
 }
 
 .container {
-    max-width: 600px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
@@ -80,6 +80,11 @@ body {
     z-index: 1000;
     padding: 10px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.nav-list h1 {
+    color: white;
+    font-weight: bold;
 }
 
 /* Navigation list styles */
