--- a/public/css/orderedProducts.css
+++ b/public/css/orderedProducts.css
@@ -3,12 +3,12 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     color: #333;
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 .container {
     width: 95%;
-    max-width: 600px;
+    /*max-width: 600px;*/
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
@@ -73,6 +73,11 @@ button:hover {
     left: 0;
     z-index: 1000;                                                                                       padding: 10px 0;                                                                                     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);                                                        }                                                                                                                                                                                                         /* Navigation list styles */                                                                         .nav-list {                                                                                              display: flex;                                                                                       justify-content: space-around;                                                                       align-items: center;                                                                                 max-width: 1200px;                                                                                   margin: 0 auto;                                                                                  }                                                                                                                                                                                                         /* Navigation item styles */                                                                         .nav-list li {                                                                                           display: flex;
     align-items: center;
+}
+
+.nav-list h1 {
+    color: white;
+    font-weight: bold;
 }
 
 /* Link styles */
