--- a/views/products.ejs
+++ b/views/products.ejs
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="/css/products.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
       <nav class="header-nav">
         <ul class="nav-list">
-            <% if (isAuthenticated) { %>
+            <h1>SHOPPING MARKET</h1>
+            <% if (isAuthenticated) { %> 
                 <li><a href="/user/profile">
                     <img src="<%= user.profile_photo %>" alt="Profile Photo" class="profile-image"> Profile
                 </a></li>
@@ -24,7 +22,10 @@
                 <li><a href="/orders">My Orders</a></li>
                 <li><a href="/user/logout">Logout</a></li>
             <% } else { %>
-		<h1>SHOPPING MARKET</h1>
+                <li><a href="#cart" class="cart-link">
+                    <img src="/images/cart-icon.png" alt="Cart" class="cart-image">
+                    <span class="cart-count" id="cart-count"><%= cartItemCount %></span> Cart
+                </a></li>
                 <li><a href="/user/login">Login</a></li>
                 <li><a href="/user/register">Register</a></li>
             <% } %>
