--- a/views/products.ejs
+++ b/views/products.ejs
@@ -106,6 +106,7 @@
         <div id="chat-messages" style="height: 300px; overflow-y: scroll; padding: 10px;"></div>
         <input type="text" id="chat-message" placeholder="Type your message...">
         <button onclick="sendMessage()">Send</button>
+	<button onclick="clearChat()">Clear Chat</button>
       </div>
       <button onclick="toggleChat()" style="position: fixed; bottom: 20px; right: 20px;">Chat</button>
       <div id="chat-notification" style="display: none; position: fixed; bottom: 70px; right: 20px; background: red; color: white; padding: 5px;">New Message</div>
