--- a/views/admin-chat.ejs
+++ b/views/admin-chat.ejs
@@ -2,14 +2,25 @@
 <html>
 <head>
     <title>Admin Chat</title>
+    <link rel="stylesheet" href="/css/admin-chat.css">
     <style>
         .chat-room { border: 1px solid #ccc; margin: 10px; padding: 10px; }
         .chat-messages { height: 200px; overflow-y: scroll; }
     </style>
 </head>
 <body>
-    <h1>Admin Chat Interface</h1>
-    <div id="chat-rooms"></div>
+   <header>
+     <h1>SHOPPING MARKET</h1>
+     <nav>
+	<ul>
+           <li><a href="/products">Go Back</a></li>
+	</ul>
+     </nav>
+   </header>
+   <main>
+	<h2>Admin Chat Interface</h2>
+        <div id="chat-rooms"></div>
+   </main>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
